
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:background="@color/wallet_holo_blue_light">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/popcorn_movie_act_1"
    tools:context="com.example.woody.kiddymov.AddNewVid">
    <EditText style="@style/ListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/display_movie_name"
        android:hint="insert movie&apos;s name here..." />
    <TextView style="@style/RadioGroupInList"
        android:text="@string/q1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:text="@string/q1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/q1">
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a1"
            android:id="@+id/a11" />
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a2"
            android:id="@+id/a12"/>
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a3"
            android:id="@+id/a13"/>
    </RadioGroup>

    <TextView
        style="@style/ListView"
        android:text="@string/q2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup style="@style/RadioGroupInList"
        android:text="@string/q2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/q2">
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a21"
            android:id="@+id/a21"/>
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a22"
            android:id="@+id/a22"/>
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a23"
            android:id="@+id/a23"/>
    </RadioGroup>

    <TextView style="@style/ListView"
        android:text="@string/q3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:text="@string/q3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/q3">
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a31"
            android:id="@+id/a31"/>
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a32"
            android:id="@+id/a32"/>
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a33"
            android:id="@+id/a33"/>
    </RadioGroup>

    <TextView style="@style/ListView"
        android:text="@string/q4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:text="@string/q4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/q4">
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a41"
            android:id="@+id/a41"/>
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a42"
            android:id="@+id/a42"/>
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a43"
            android:id="@+id/a43"/>
    </RadioGroup>

    <TextView style="@style/ListView"
        android:text="@string/q5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:text="@string/q5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/q5">
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a51"
            android:id="@+id/a51"/>
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a52"
            android:id="@+id/a52"/>
        <RadioButton style="@style/RadioGroupInList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a53"
            android:id="@+id/a53"/>
    </RadioGroup>

    <TableLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:padding ="2dip">
    <Button style="@style/ButtonStyle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter_vid_to_db"
        android:id="@+id/send_to_db_button" />
    </TableRow>
        <TableRow
            android:padding ="2dip">
    <Button style="@style/ButtonStyle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_record_button"
        android:id="@+id/add_record_button" />
        </TableRow>
    </TableLayout>

</LinearLayout>
</ScrollView>