<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@drawable/popcorn_movie_parent"
    tools:context="com.example.woody.kiddymov.ParentMenu">

    <EditText
        android:id="@+id/key_to_search"
        android:hint="@string/search_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#dee9ff"
        android:textStyle="bold"/>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding ="2dip">
                <Button
                    android:text="@string/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="searchVidOnLine"
                    android:background="#52abda"
                    android:textColor="#dee9ff"
                    android:textStyle="bold"></Button>
                  <!--  android:layout_gravity="center_horizontal" />  -->
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding ="2dip">
            <Button
                android:text="@string/recommend_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="recommendMovies"
                android:background="#52abda"
                android:id="@+id/recommend_btn"
                android:textColor="#dee9ff"
                android:textStyle="bold"></Button>
               <!-- android:layout_gravity="center_horizontal" /> -->
                </TableRow>
    </TableLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding ="10dip">
    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/deleteBtn"
        android:text="@string/delete_btn"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@+id/editBtn"
        android:src="@drawable/delete_box_new3"
        android:onClick="deleteVid"
        style="?android:attr/borderlessButtonStyle"/>

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/editBtn"
        android:text="@string/edit_btn"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/edit_pencil_new3"
        android:onClick="editVid"
        style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        android:choiceMode="singleChoice"
        android:listSelector="#38596f" />

</LinearLayout>
